ledger component and ledger view component created and tested

--- a/src/app/features/ledgers/ledger/ledger.component.css
+++ b/src/app/features/ledgers/ledger/ledger.component.css
@@ -7,6 +7,10 @@ section {
   padding: 10px;
 }
 
+label {
+  display: block;
+}
+
 .section-one {
   background-color: #fafafa;
   text-align: center;
