--- a/src/app/shared/form-options/form-options.component.html
+++ b/src/app/shared/form-options/form-options.component.html
@@ -5,7 +5,7 @@
     type="submit"
     [disabled]="submitDisabled"
   >
-    Submit
+    {{ buttonText }}
   </button>
   <button
     class="e-warning e-large"
