--- a/src/app/features/ledgers/ledger-view/ledger-view.component.html
+++ b/src/app/features/ledgers/ledger-view/ledger-view.component.html
@@ -1,2 +1,13 @@
-<app-data-view [data]='data' [columnsList]='columnBluePrint' [showAdd]='true' [showUpdate]='true' [showPrint]='true'
-  [enableSearching]='true' [enablePaging]='true' (dataQuired)='dataQuiredHandler($event)' [showColumnChooser]='true'></app-data-view>
+<app-data-view
+  [data]="data"
+  [columnsList]="columnBluePrint"
+  [showAdd]="true"
+  [showUpdate]="true"
+  [showDelete]="true"
+  (deleteRecord)="deleteLedgerEntry($event)"
+  [showPrint]="true"
+  [enableSearching]="true"
+  [enablePaging]="true"
+  (dataQuired)="dataQuiredHandler($event)"
+  [showColumnChooser]="true"
+></app-data-view>
