--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,16 +20,10 @@
         iconCss="e-icons burg-icon"
         isToggle="true"
         (click)="btnClick()"
-        content="Open"
       ></button>
     </div>
     <ejs-toolbar>
-      <e-items>
-        <e-item text="Appdiv"></e-item>
-        <e-item text="Appdiv"></e-item>
-        <e-item text="Appdiv"></e-item>
-        <e-item type="Appdiv"></e-item>
-      </e-items>
+      <e-items> </e-items>
     </ejs-toolbar>
     <div id="maincontent">
       <router-outlet></router-outlet>
