ledger service tested

--- a/src/app/features/ledgers/ledger/ledger.component.css
+++ b/src/app/features/ledgers/ledger/ledger.component.css
@@ -55,3 +55,11 @@ label {
 .secone-colone {
   background-color: azure;
 }
+
+.e-plus-icon::before {
+  content: '\e823';
+}
+
+.e-close::before {
+  content: '\e7fc';
+}
