--- a/src/styles.css
+++ b/src/styles.css
@@ -6,3 +6,13 @@ body {
   background-color: #eee !important;
   padding: 10px;
 }
+
+
+
+.e-plus-icon::before {
+  content: '\e823';
+}
+
+.e-close::before {
+  content: '\e7fc';
+}
