--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,6 @@
 .center-align {
-  text-align: center;
-  padding: 20px;
+  text-align: left;
+  padding: 0px;
 }
 
 .burg-icon:before {
@@ -9,19 +9,13 @@
   font-family: 'e-icons';
 }
 
-.title {
-  text-align: center;
-  font-size: 20px;
-  padding: 15px;
-}
-
 :host {
   display: grid;
   height: 100vh;
 }
 
 #head {
-  border: 1px solid #424242;
+  border: none;
   border-bottom-color: transparent;
   background: #4d841d21;
 }
@@ -34,7 +28,7 @@
   box-shadow: none;
   border-radius: 0;
   height: 39px;
-  width: 100px;
+  width: 50px;
 }
 
 #close,
@@ -63,7 +57,7 @@
 }
 
 #toggle {
-  color: white;
+  color: black;
 }
 
 @font-face {
@@ -73,8 +67,15 @@
   font-style: normal;
 }
 
+#targetContent {
+  padding: 0Px;
+}
 
+#default-sidebar {
+  position: fixed;
+  min-width: 250px;
+}
 
-#mainContent {
-  padding: 20Px;
+.main {
+  height: 800px;
 }
