--- a/src/app/features/accounts/account-form/account-form.component.html
+++ b/src/app/features/accounts/account-form/account-form.component.html
@@ -5,7 +5,8 @@
     (ngSubmit)="onSubmit()"
     name="accountForm"
   >
-    <div class="content">
+    {{ accountForm.value | json }}
+    <div class="content card m-3">
       <div class="row">
         <div class="col-md-6 col-sm-12">
           <div class="row">
@@ -30,6 +31,11 @@
           <div class="row">
             <!-- Account Id Input-->
             <div class="col-12">
+              <ejs-maskedtextbox
+                mask="\\9\9\9\9 999"
+                placeholder="Mask \\9\\9\\9\\9999 (ex: A321)"
+                floatLabelType="Always"
+              ></ejs-maskedtextbox>
               <label for="accountId">Account ID</label>
               <div>
                 <input
@@ -37,7 +43,6 @@
                   id="accountId"
                   name="accountId"
                   class="e-input"
-                  formControlName="AccountId"
                 />
                 <div
                   class="e-error"
